# Arka

arka-core/: ARCHITECTURE_DECISIONS.md  Cargo.toml  QUERY_INTEGRATION.md  README.md  SLATEDB_DURABILITY_ANALYSIS.md  UNIFIED_STORAGE_ARCHITECTURE.md
arka-core/arka_data/index_demo/: segment_0000000001.arrow  segment_0000000002.arrow  segment_0000000003.arrow
arka-core/arka_data/segments/: segment_0000000001.arrow  segment_0000000002.arrow  segment_0000000003.arrow
arka-core/examples/: README.md  flight_client.py  flight_server.rs  index_queries.rs  query_example.rs  read_segments.rs  rust_client.rs  wal_example.rs  write_segments.rs
arka-core/rfc/: 001-arrow-flight-streaming-durability.md  ARROW_FLIGHT_USER_GUIDE.md
arka-core/src/: lib.rs  lsn.rs  main.rs  tests.rs  wal.rs
arka-core/src/catalog/: catalog.rs  metadata.rs  mod.rs
arka-core/src/flight/: messages.rs  mod.rs  service.rs
arka-core/src/indexes/: mod.rs  pk_index.rs  segment_index.rs
arka-core/src/query/: mod.rs  predicates.rs  pruning.rs  segment_statistics.rs  table_provider.rs
arka-core/src/storage/: buffer_flusher.rs  config.rs  lsn_manager.rs  mod.rs  segment.rs  segment_flusher.rs  segment_writer.rs  write_buffer.rs
