[package]
name = "arka-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "arka-core"
path = "src/main.rs"

[[bin]]
name = "test-runner"
path = "src/tests.rs"

[dependencies]
arrow = "56.1.0"
dashmap = "6.1.0"
tokio = { version = "1.47.1", features = ["sync", "rt-multi-thread", "macros", "fs"] }
futures = "0.3"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.0"
