[package]
name = "arka-core"
version = "0.1.0"
edition = "2021"
default-run = "arka-core"

[[bin]]
name = "arka-core"
path = "src/main.rs"

[[example]]
name = "rust_client"
path = "examples/rust_client.rs"

[dependencies]
arrow = "56.1.0"
arrow-flight = "56.1.0"
arrow-schema = "56.1.0"
dashmap = "6.1.0"
tokio = { version = "1.47.1", features = ["sync", "rt-multi-thread", "macros", "fs", "time", "signal"] }
tokio-stream = "0.1"
futures = "0.3"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.42", features = ["serde"] }
thiserror = "2.0.17"
tonic = "0.13"  # Must match arrow-flight's tonic version
prost = "0.13"
bytes = "1.0"

[dev-dependencies]
tempfile = "3.0"
